--- a/public/css/adaptiv.css
+++ b/public/css/adaptiv.css
@@ -5324,3 +5324,7 @@ body.modal-loading {
     padding: 1px 25px 0;
     font-size: 12px;
 }
+.adres{
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
