--- a/public/css/adaptiv.css
+++ b/public/css/adaptiv.css
@@ -5329,13 +5329,18 @@ body.modal-loading {
      color: red;
  }
 .adres{
-    padding-top: 5px;
-    padding-bottom: 5px;
-
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border-bottom: 1px dashed #ccc;
+    background: url(./images/lapka.png) no-repeat;
+    background-position: 5px;
+    background-size: 20px;
+    padding-left: 30px;
 }
 .adres:hover {
-    padding-top: 5px;
-    padding-bottom: 5px;
     cursor: pointer !important;
     background-color: #CCCCCC;
+    background: url(./images/lapka_w.png) no-repeat #CCCCCC;
+    background-position: 5px;
+    background-size: 20px;
 }
