edit  more shop

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -2838,12 +2838,12 @@ input[type="button"].btn-block {
   /*display: none;*/
 /*}*/
 
-.collapsing {
-  position: relative;
-  height: 0;
-  overflow: hidden;
-  transition: height 0.35s ease;
-}
+/*.collapsing {*/
+  /*position: relative;*/
+  /*height: 0;*/
+  /*overflow: hidden;*/
+  /*transition: height 0.35s ease;*/
+/*}*/
 
 @media screen and (prefers-reduced-motion: reduce) {
   .collapsing {
