--- a/public/css/app.css
+++ b/public/css/app.css
@@ -83,6 +83,7 @@
 }
 
 html {
+    font-size: 16px;
     font-family: sans-serif;
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
@@ -556,46 +557,12 @@ pre code {
     margin-left: auto
 }
 
-@media (min-width: 576px) {
-    .container {
-        max-width: 540px
-    }
-}
-
-@media (min-width: 768px) {
-    .container {
-        max-width: 720px
-    }
-}
-
-@media (min-width: 992px) {
-    .container {
-        max-width: 960px
-    }
-}
-
-@media (min-width: 1200px) {
-    .container {
-        max-width: 1140px
-    }
-}
-
 .container-fluid {
     width: 100%;
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto
-}
-
-.row {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    margin-right: -15px;
-    margin-left: -15px
 }
 
 .no-gutters {
@@ -608,13 +575,6 @@ pre code {
     padding-left: 0
 }
 
-.col, .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col-auto, .col-lg, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-auto, .col-md, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md-auto, .col-sm, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-auto {
-    position: relative;
-    width: 100%;
-    min-height: 1px;
-    padding-right: 15px;
-    padding-left: 15px
-}
 
 .col {
     -ms-flex-preferred-size: 0;
@@ -879,90 +839,6 @@ pre code {
         flex: 0 0 auto;
         width: auto;
         max-width: none
-    }
-
-    .col-sm-1 {
-        -webkit-box-flex: 0;
-        -ms-flex: 0 0 8.33333333%;
-        flex: 0 0 8.33333333%;
-        max-width: 8.33333333%
-    }
-
-    .col-sm-2 {
-        -webkit-box-flex: 0;
-        -ms-flex: 0 0 16.66666667%;
-        flex: 0 0 16.66666667%;
-        max-width: 16.66666667%
-    }
-
-    .col-sm-3 {
-        -webkit-box-flex: 0;
-        -ms-flex: 0 0 25%;
-        flex: 0 0 25%;
-        max-width: 25%
-    }
-
-    .col-sm-4 {
-        -webkit-box-flex: 0;
-        -ms-flex: 0 0 33.33333333%;
-        flex: 0 0 33.33333333%;
-        max-width: 33.33333333%
-    }
-
-    .col-sm-5 {
-        -webkit-box-flex: 0;
-        -ms-flex: 0 0 41.66666667%;
-        flex: 0 0 41.66666667%;
-        max-width: 41.66666667%
-    }
-
-    .col-sm-6 {
-        -webkit-box-flex: 0;
-        -ms-flex: 0 0 50%;
-        flex: 0 0 50%;
-        max-width: 50%
-    }
-
-    .col-sm-7 {
-        -webkit-box-flex: 0;
-        -ms-flex: 0 0 58.33333333%;
-        flex: 0 0 58.33333333%;
-        max-width: 58.33333333%
-    }
-
-    .col-sm-8 {
-        -webkit-box-flex: 0;
-        -ms-flex: 0 0 66.66666667%;
-        flex: 0 0 66.66666667%;
-        max-width: 66.66666667%
-    }
-
-    .col-sm-9 {
-        -webkit-box-flex: 0;
-        -ms-flex: 0 0 75%;
-        flex: 0 0 75%;
-        max-width: 75%
-    }
-
-    .col-sm-10 {
-        -webkit-box-flex: 0;
-        -ms-flex: 0 0 83.33333333%;
-        flex: 0 0 83.33333333%;
-        max-width: 83.33333333%
-    }
-
-    .col-sm-11 {
-        -webkit-box-flex: 0;
-        -ms-flex: 0 0 91.66666667%;
-        flex: 0 0 91.66666667%;
-        max-width: 91.66666667%
-    }
-
-    .col-sm-12 {
-        -webkit-box-flex: 0;
-        -ms-flex: 0 0 100%;
-        flex: 0 0 100%;
-        max-width: 100%
     }
 
     .order-sm-first {
